prevent text overflow

--- a/src/components/Home/components/Navigation/Problem/styles.scss
+++ b/src/components/Home/components/Navigation/Problem/styles.scss
@@ -25,7 +25,6 @@
     border: none;
     text-align: left;
     text-decoration: none;
-    display: inline-block;
 }
 
 .colorInherit {
